--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -32,9 +32,17 @@
     "@chooseCategoryBtnLbl": {
         "description": "The label of the button to choose a category"
     },
+    "categoryDetailsTitle": "Category",
+    "@categoryDetailsTitle": {
+        "description": "The title of the category details page"
+    },
     "catgoryBtnLbl": "Ok",
     "@catgoryBtnLbl": {
         "description": "The label of the button to choose a category"
+    },
+    "categoryDetailsErrorLoading": "Error loading category details:",
+    "@categoryDetailsErrorLoading": {
+        "description": "Error message prefix displayed when category details fail to load."
     },
     "startQuizBtnLbl": "Start Quiz",
     "@startQuizBtnLbl": {
