refactor/fix(user): migrate currentUserModel to stream and improve user creation logic

--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -411,5 +411,9 @@
     "cancel": "Abbrechen",
     "@cancel": {
         "description": "Label for a generic cancel button, typically used in dialogs."
+    },
+    "profileLoadError": "Fehler beim Laden des Profils.",
+    "@profileLoadError": {
+        "description": "Error message shown when loading the profile fails"
     }
 }
