--- a/ios/Runner/en.lproj/InfoPlist.strings
+++ b/ios/Runner/en.lproj/InfoPlist.strings
@@ -1,3 +1,4 @@
 "NSContactsUsageDescription" = "We need access to your contacts to personalize your profile with your contact photo.";
 "NSPhotoLibraryUsageDescription" = "We need access to your photo library so you can choose a new profile picture.";
 "NSCameraUsageDescription" = "We need access to your camera so you can take a new profile picture.";
+"NSPhotoLibraryAddUsageDescription" = "We need access to save profile pictures to your photo library.";
