fix(ui): update picker button style and improve category section title localization

--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -416,7 +416,7 @@
     "@profileLoadError": {
         "description": "Error message shown on profile page if user data fails to load"
     },
-    "homeActualCategorySectionTitle": "actual",
+    "homeActualCategorySectionTitle": "current",
     "@homeActualCategorySectionTitle": {
         "description": "Title for the section on the home screen displaying the currently active category."
     },
