--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -208,6 +208,14 @@
     "@pickerDoneButton": {
         "description": "Label for the 'Done' button in pickers"
     },
+    "pickerOptionAutomatic": "Automatic",
+    "@pickerOptionAutomatic": {
+        "description": "The name for the 'Automatic' option in a picker"
+    },
+    "pickerOptionAutomaticDescription": "Let the app choose a category for you.",
+    "@pickerOptionAutomaticDescription": {
+        "description": "The description for the 'Automatic' option in a picker"
+    },
     "profileAppBarTitle": "Profile",
     "@profileAppBarTitle": {
         "description": "Title of the app bar for the profile"
