--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -208,11 +208,11 @@
     "@pickerDoneButton": {
         "description": "Label for the 'Done' button in pickers"
     },
-    "pickerOptionAutomatic": "Automatisch",
+    "pickerOptionAutomatic": "Willkommen",
     "@pickerOptionAutomatic": {
         "description": "The name for the 'Automatic' option in a picker"
     },
-    "pickerOptionAutomaticDescription": "Lass die App eine Kategorie für dich auswählen.",
+    "pickerOptionAutomaticDescription": "Die App wählt nach jedem Quiz automatisch eine neue Kategorie für dich aus.",
     "@pickerOptionAutomaticDescription": {
         "description": "The description for the 'Automatic' option in a picker"
     },
