--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -467,5 +467,9 @@
     "pickerDoneButton": "Fertig",
     "@pickerDoneButton": {
         "description": "Label for the 'Done' button in pickers"
+    },
+    "articleLoadingError": "Fehler beim Laden des Artikels.",
+    "@articleLoadingError": {
+        "description": "Error message shown when loading an article fails"
     }
 }
