feat(profile-apple sign): auto-prefill and auto-save profile image from device contacts

--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -499,5 +499,9 @@
     "profileUpdateSuccessButImageFailed": "Profil erfolgreich aktualisiert, aber das Bild konnte nicht hochgeladen werden.",
     "@profileUpdateSuccessButImageFailed": {
         "description": "Success message shown when the profile is updated but the image upload fails"
+    },
+    "profileContactImageAutoSaved": "Profilbild automatisch gespeichert.",
+    "@profileContactImageAutoSaved": {
+        "description": "Message shown when the profile image is automatically saved"
     }
 }
