--- a/lib/core/localization/app_en.arb
+++ b/lib/core/localization/app_en.arb
@@ -499,5 +499,9 @@
     "profileUpdateSuccessButImageFailed": "Profile updated successfully, but the image upload failed.",
     "@profileUpdateSuccessButImageFailed": {
         "description": "Message shown when the profile is updated successfully, but the image upload fails"
+    },
+    "profileContactImageAutoSaved": "Profile image auto-saved successfully.",
+    "@profileContactImageAutoSaved": {
+        "description": "Message shown when the profile image is automatically saved successfully"
     }
 }
