feat(localization): add carousel article title localization and update home page usage

--- a/lib/core/localization/app_de.arb
+++ b/lib/core/localization/app_de.arb
@@ -547,5 +547,9 @@
                 "example": "Unbekannter Fehler"
             }
         }
+    },
+    "carouselArticleTitle": "artikel",
+    "@carouselArticleTitle": {
+        "description": "Title for the carousel displaying articles."
     }
 }
